--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,6 +32,6 @@ jobs:
         with:
           deploy_key: ${{ secrets.ACTIONS_DEPLOY_KEY }}
           external_repository: OiPunk/oipunk.github.io
-          publish_branch: master
+          publish_branch: main
           publish_dir: ./dist
           commit_message: "Deploy from portfolio: ${{ github.sha }}"
